Estandares de calidad Aplicados pep8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "python.analysis.typeCheckingMode": "basic",
     "python.autoComplete.extraPaths": [
     ],
-    "python.analysis.extraPaths": []
+    "python.analysis.extraPaths": [],
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
